--- a/jvproj/JvCalc.ipynb
+++ b/jvproj/JvCalc.ipynb
@@ -21,10 +21,14 @@
     "\n",
     "`appendEntry` 메소드의 주석에 \"legal entry\"라는 표현이 등장하는데, Java 버전에서는 이 내용은 사실상 거의 무시해도 좋다. 이것은 Kotlin 버전에서만 구현하는 것으로 한다.\n",
     "보통 계산기 응용프로그램들은 올바른 식(valid expression)으로서 구성될 가망이 없는 버튼을 누르면 해당 입력을 거부되거나, 혹은 사용자에게 친절을 베풀어 자동으로 사용자가 입력하지 않은 내용까지 자동으로 추가하여 올바른 식을 구성할 수 있는 형태로만 입력이 진행된다.\n",
-    "하지만, 이번 Java 버전에서는 올바른 식으로 구성될 가망이 없는 Entry들도 `appendEntry` 메소드를 통해 입력이 항상 가능하도록 구현하라.\n",
-    "그러니까 `appendEntry` 메소드는 항상 true를 리턴하게 된다는 말이다.\n",
+    "하지만, 이번 Java 버전에서는 올바른 식으로 구성될 가망이 없는 `Entry`들도 `appendEntry` 메소드를 통해 입력이 항상 가능하도록 구현하라.\n",
+    "그러니까 `appendEntry` 메소드는 항상 `true`를 리턴하게 된다는 말이다.\n",
     "\n",
-    "Calculator의 기능을 구현하기 위해서 적절한 인스턴스 변수들도 선언되어야 할 것이다.\n",
+    "실제 계산기 응용프로그램과 `ICalculator` 인터페이스는 숫자를 입력할 때 차이점이 있다.\n",
+    "실제 계산기 응용프로그램은 43이라는 수를 입력하기 위해 각각의 자리수인 4를 입력하고 3을 입력하는 과정을 거쳐야 하며, 연속되는 자리수 이외의 다른 입력이 들어오면 이전까지 연속적으로 입력되었던 자리수들을 합쳐서 하나의 수를 구성한다.\n",
+    "우리는 이를 단순화하여 `Entry.Value` 값으로 한꺼번에 43이라는 수를 `appendEntry`로 추가하도록 한다.\n",
+    "\n",
+    "`Calculator`의 기능을 구현하기 위해서는 `ICalculator`의 메소드를 구현하는 것 외에도 적절한 인스턴스 변수들도 선언되어야 할 것이다.\n",
     "\n",
     "인스턴스 변수의 정보의 내용을 노출하는 메소드들은 캡슐화를 고려하여 작성하라.\n",
     "\n",
