--- a/jvproj/JvCalc.ipynb
+++ b/jvproj/JvCalc.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "### Define your `Calculator` class by overriding abstract methods of the `ICalculator` interface (15점)\n",
     "\n",
-    "`ICalculator` 인터페이스의 주석에 지시된 내용과 수업시간에 설명한 내용을 바탕으로 해당 인터페이스를 구현하는 `Calculator`를 작성하고 적절히 테스트하라.\n",
+    "`ICalculator` 인터페이스의 주석에 지시된 내용과 수업시간에 설명한 내용을 바탕으로 해당 인터페이스를 구현하는 `Calculator`를 작성하고 적절히 테스트하라. 테스트들에서 인터페이스의 모든 메소드의 동작을 활용해야 하며, 의도한 테스트 시나리오대로 동작함을 확인할 수 있도록 적절한 출력이 이루어져야 한다.\n",
     "\n",
     "`appendEntry` 메소드의 주석에 \"legal entry\"라는 표현이 등장하는데, Java 버전에서는 이 내용은 사실상 거의 무시해도 좋다. 이것은 Kotlin 버전에서만 구현하는 것으로 한다.\n",
     "보통 계산기 응용프로그램들은 올바른 식(valid expression)으로서 구성될 가망이 없는 버튼을 누르면 해당 입력을 거부되거나, 혹은 사용자에게 친절을 베풀어 자동으로 사용자가 입력하지 않은 내용까지 자동으로 추가하여 올바른 식을 구성할 수 있는 형태로만 입력이 진행된다.\n",
@@ -53,7 +53,7 @@
     "```\n",
     "\n",
     "Calculator의 기능을 완전히 완성하지 않더라도 이것만으로 부분점수가 부여될 수 있다.\n",
-    "예를 들면 `new Calculator();`만 실행한 상태에서 history나 entries등을 빈 리스트 등의 정상적인 기본값이 아닌\n",
+    "예를 들면 `new Calculator()`로 객체를 생성한 직후에 history나 entries등을 빈 리스트 등의 정상적인 기본값이 아닌\n",
     "테스트를 위해 임의로 초기화시켜 놓고 `toString`이 작동한다는 것을 시연하는 테스트가 있으면 부분점수 획득이 가능하다.\n",
     "당연히 `toString`에 위 내용을 문자열로 하드코딩하면 당연히 인정이 안되고, 인스턴스 변수에 있는 데이터로부터 처리하여 문자열을 만들 내야 부분점수로 인정될 요건이 된다.\n",
     "\n",
