--- a/ktproj/KtCalc.ipynb
+++ b/ktproj/KtCalc.ipynb
@@ -5,7 +5,7 @@
    "id": "f44a2cfd",
    "metadata": {},
    "source": [
-    "# HW2a: Kotlin Calculator\n",
+    "# HW2b: Kotlin Calculator\n",
     "- 이름: ???\n",
     "- 학번: ????????"
    ]
@@ -17,17 +17,15 @@
    "source": [
     "https://calculatorhistory.net\n",
     "\n",
-    "### Define your `Calculator` class by overriding abstract methods of the `ICalculator` interface (??점)\n",
-    "\n",
     "`ICalculator` 인터페이스의 주석에 지시된 내용과 수업시간에 설명한 내용을 바탕으로 해당 인터페이스를 구현하는 `Calculator`를 작성하고 적절히 테스트하라.\n",
     "\n",
-    "`appendEntry` 메소드의 주석에 \"legal entry\"라는 표현이 등장하는데, TODO ????\n",
+    "### Define your `Calculator` class by overriding abstract methods of the `ICalculator` interface (5점)\n",
     "\n",
-    "Calculator의 기능을 구현하기 위해서 적절한 인스턴스 변수들도 선언되어야 할 것이다.\n",
+    "`toString`을 오버리이딩한 다음 Java 과제와 마찬가지 기능을 구현하는 내용에 대한 부분점수\n",
     "\n",
-    "### Override `Calculator::toString` (10점)\n",
+    "### Override `Calculator::toString` (5점)\n",
     "\n",
-    "테스트 출력을 위해서는 적절히 보기좋게 계산기의 상태를 출력할 필요가 있다. 따라서 주어진 ICalculator 인터페이스의 추상 메소드를 오버라이딩하는 것 외에도 출력을 위한 `toString`도 적절히 오버라이드하라.\n",
+    "Java 과제에서와 마찬가지로 `toString`을 적절히 오버라이드하라.\n",
     "\n",
     "예컨대, `1 + 1`을 계산한 다음 `2 * 3`을 계산하고 나서 지금은 미완성인 식 `(`를 입력중인 상황이라면\n",
     "Calculator 객체가 **정확히** 다음과 같이 출력되어야 한다.\n",
@@ -46,12 +44,18 @@
     "```\n",
     "\n",
     "Calculator의 기능을 완전히 완성하지 않더라도 이것만으로 부분점수가 부여될 수 있다.\n",
-    "예를 들면 `new Calculator();`만 실행한 상태에서 history나 entries등을 빈 리스트 등의 정상적인 기본값이 아닌\n",
-    "테스트를 위해 임의로 초기화시켜 놓고 `toString`이 작동한다는 것을 시연하는 테스트가 있으면 부분점수 획득이 가능하다.\n",
-    "당연히 `toString`에 위 내용을 문자열로 하드코딩하면 당연히 인정이 안되고, 인스턴스 변수에 있는 데이터로부터 처리하여 문자열을 만들 내야 부분점수로 인정될 요건이 된다.\n",
     "\n",
     "자신이 작성한 프로그램이 잘 동작하는지 알아보기 위해서는 테스트를 실행했을 때 적절한 데이터가 출력되는지 알아보아야 하는 기능이 필수적이다.\n",
     "그러니까 작성하기 쉬운 간단한 메소드들은 먼저 작성해 놓더라도 조금 복잡하다고 생각되는 것을 작성하여 모든 내용을 완성하기 전에 일단 `toString`부터 작성할 것을 권장한다.\n",
+    "\n",
+    "\n",
+    "## 올바른 식이 될 가능성이 없는 입력 거부 및 아주 간단한 자동완성 기능 (15점 = 14 + 1)\n",
+    "\n",
+    "\n",
+    "`appendEntry` 메소드의 주석에 \"legal entry\"라는 표현이 등장하는데, 이는 앞으로 올바른 식(valid expressin)이 될 가능성이 있는 경우를 말한다. 만일 앞으로 올바른 식이 될 가능성이 없게 되는 `Entry`를 추가하려고 `appendEntry`를 호출하면 실제로 entries에 추가하지 말고 `false`를 리턴하라.\n",
+    "\n",
+    "링크로 제시한 계산기에는 다양한 자동완성 기능이 있는데 이 과제에서는 거의 모든 계산기에서 공통적으로 제공하는 한 가지 자동완성 기능만 구현하라.\n",
+    "빈 entries에 첫 번째로 연산자를 appendEntry로 추가하려는 경우는 앞으로 올바른 식이 될 가능성이 없는 entry, 즉, illeigal entry이다. 하지만 이런 경우에는 `lastValue()`를 entries에 먼저 추가하고 해당 연산자를 추가하는 방식의 간단한 자동완성 기능을 appendEntry에 구현하라.\n",
     "\n",
     "----"
    ]
