--- a/ktproj/KtCalc.ipynb
+++ b/ktproj/KtCalc.ipynb
@@ -55,9 +55,9 @@
     "`appendEntry` 메소드의 주석에 \"legal entry\"라는 표현이 등장하는데, 이는 앞으로 계속된 `appendEntry`를 통해 올바른 식(valid expressin)이 될 가능성이 있는 경우를 말한다. 만일 앞으로 올바른 식이 될 가능성이 없게 되는 `Entry`를 추가하려고 `appendEntry`를 호출하면 실제로 entries에 추가하지 말고 `false`를 리턴하라. **코드를 작성하기 전에 어떤 경우들이 올바른 식이 되지 않는지 생각해 보고 생각을 정리한 규칙들을 나열하여 예시를 들면서 설명하라.**\n",
     "\n",
     "- 어떤 규칙을 적용할지 먼저 정리하여 설명하지 않고 코드만 작성하면 시작하면 점수없음!!!!\n",
-    "- 가능성이 있는데 illegal entry로 처리해 거부하는 잘못된 규칙을 작성하는 경우 점수없음!!!!\n",
-    "- illegal entry인데 작성된 규칙에 따라 거부되지 않는 경우가 발생하는 것으로 확인되면 점수없음!!!\n",
     "- illegal entry로 처리하는 각각의 규칙에 대해 구체적 예시를 들지 않으면 점수없음!!!!\n",
+    "- 가능성이 있는데 illegal entry로 처리해 거부하는 잘못된 규칙을 작성하는 경우 점수없음!!!!\n",
+    "- illegal entry인데 작성된 규칙에 따라 거부되지 않는 경우가 발생하는 것으로 확인되면 감점요인!!!\n",
     "\n",
     "링크로 제시한 계산기에는 다양한 자동완성 기능이 있는데 이 과제에서는 거의 모든 계산기에서 공통적으로 제공하는 한 가지 자동완성 기능만 구현하라.\n",
     "빈 entries에 첫 번째로 연산자를 appendEntry로 추가하려는 경우는 앞으로 올바른 식이 될 가능성이 없는 entry, 즉, illeigal entry이다. 하지만 이런 경우에만 예외적으로 `lastValue()`를 entries에 먼저 추가하고 해당 연산자를 추가하는 방식의 간단한 자동완성 기능을 appendEntry에 구현하라.\n",
