--- a/Chap07.ipynb
+++ b/Chap07.ipynb
@@ -361,6 +361,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c519bb5d-b0c7-44d8-a0ce-b29740f4ddc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "030b353b-238d-42c9-a3a1-8640a9c9a6da",
    "metadata": {
@@ -771,7 +781,7 @@
    "name": "kotlin",
    "nbconvert_exporter": "",
    "pygments_lexer": "kotlin",
-   "version": "1.8.20-Beta"
+   "version": "1.8.20"
   }
  },
  "nbformat": 4,
