--- a/jvproj/JvCalc.ipynb
+++ b/jvproj/JvCalc.ipynb
@@ -36,13 +36,13 @@
     "\n",
     "테스트 출력을 위해서는 적절히 보기좋게 계산기의 상태를 출력할 필요가 있다. 따라서 주어진 ICalculator 인터페이스의 추상 메소드를 오버라이딩하는 것 외에도 출력을 위한 `toString`도 적절히 오버라이드하라.\n",
     "\n",
-    "예컨대, `1 + 1`을 계산한 다음 `2 * 3`을 계산하고 나서 지금은 미완성인 식 `(`를 입력중인 상황이라면\n",
+    "예컨대, `1 + 1`을 계산한 다음 `2 * 3`을 계산하고 나서 지금은 미완성인 식 `( 43 +`를 입력중인 상황이라면\n",
     "Calculator 객체가 **정확히** 다음과 같이 출력되어야 한다.\n",
     "들여쓰기에 해당하는 왼쪽의 빈칸들은 space가 아닌 tab으로 처리하라.\n",
     "\n",
     "```\n",
     "Calculator[\n",
-    "\tentries=\"(\",\n",
+    "\tentries=\"( 43 +\",\n",
     "\tcurrVal=null,\n",
     "\tlastVal=6,\n",
     "\thistory=[\n",
