--- a/ktproj/KtCalc.ipynb
+++ b/ktproj/KtCalc.ipynb
@@ -27,13 +27,13 @@
     "\n",
     "Java 과제에서와 마찬가지로 `toString`을 적절히 오버라이드하라.\n",
     "\n",
-    "예컨대, `1 + 1`을 계산한 다음 `2 * 3`을 계산하고 나서 지금은 미완성인 식 `(`를 입력중인 상황이라면\n",
+    "예컨대, `1 + 1`을 계산한 다음 `2 * 3`을 계산하고 나서 지금은 미완성인 식 `( 43 +`를 입력중인 상황이라면\n",
     "Calculator 객체가 **정확히** 다음과 같이 출력되어야 한다.\n",
     "들여쓰기에 해당하는 왼쪽의 빈칸들은 space가 아닌 tab으로 처리하라.\n",
     "\n",
     "```\n",
     "Calculator[\n",
-    "\tentries=\"(\",\n",
+    "\tentries=\"( 43 +\",\n",
     "\tcurrVal=null,\n",
     "\tlastVal=6,\n",
     "\thistory=[\n",
