add singlton and null object pattern

--- a/Chap06.ipynb
+++ b/Chap06.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "48f33440-3aa3-4a33-97ee-8fb9e036df36",
    "metadata": {
     "tags": []
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "186ee103-51d2-4378-b9c7-64e12f554817",
    "metadata": {
     "tags": []
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "c31b1e9c-5bd2-4f98-817f-74524fd6cd59",
    "metadata": {
     "tags": []
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "16b1f2c4-ffa2-4e31-a5e8-8cf8a280fb7b",
    "metadata": {
     "tags": []
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "27ba229f-144d-43c2-b8f4-1ddc03127c6a",
    "metadata": {
     "tags": []
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "4d4c3749-145e-43e9-9878-a36cbd2b020e",
    "metadata": {
     "tags": []
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "ac3634d6-7016-47ac-80a3-c688753f0238",
    "metadata": {
     "tags": []
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "12d68936-e25b-414b-8275-f28e62405667",
    "metadata": {
     "tags": []
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "194347f0-d1e4-4ef5-b306-c031e221e746",
    "metadata": {
     "tags": []
@@ -308,9 +308,278 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1787c9c2-5f05-4ddd-8c27-a8303d21583e",
+   "metadata": {},
+   "source": [
+    "## 싱글톤 Singleton \n",
+    "\n",
+    "전체 프로그램에서 딱 하나밖에 없는 객체\n",
+    "\n",
+    "Kotlin에서는 별도의 코드로 디자인 패턴으로 작성할 필요 없는 아니라 언어에서 직접 제공하는 기능으로 표현 가능\n",
+    "\n",
+    "Kotlin에서는 `object`라는 키워드를 제공"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bc9c52b2-ec0e-4c92-9d05-670152019915",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "object Sing // Sing은 타입 이름임과 동시에 유일무이한 객체의 이름"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b11f1068-7f19-4999-8112-426958bbef46",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Hello\" is String // \"Hello\"라는 문자열 객체는 String이라는 타입이다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "17ff3794-6911-44eb-8da9-84f0d9474ad1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Sing is Sing // Sing이라는 객체는 Sing이라는 타입이다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3dce2c36-2695-4de8-9839-46b6f296886b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Line_13.jupyter.kts (1:19 - 23) Expression 'Sing' of type 'Line_10_jupyter.Sing' cannot be invoked as a function. The function 'invoke()' is not found"
+     ]
+    }
+   ],
+   "source": [
+    "val anotherSing = Sing() // 생성자 호출 불가"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32a66a7d-703f-4ec3-895e-c54df8352a5b",
+   "metadata": {},
+   "source": [
+    "# 널 오브젝트 패턴\n",
+    "\n",
+    "크기가 0인 대상 또는 초기화되지 않은 상태를 null로 표현했을 때 생기는 불편함(코딩 실수 가능성, 귀찮은 예외처리)을 줄이기 위해"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "741b0480-4afa-4457-adc3-bc6d3eb2da05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// 덜 객체지향스럽게 null을 직접 사용하는 방법\n",
+    "data class Node(\n",
+    "        val item: Int,\n",
+    "        val left: Node?,\n",
+    "        val right: Node?) {\n",
+    "    fun size(): Int {\n",
+    "        val n1 = if (left ==null) 0 else left.size()\n",
+    "        val n2 = if (right==null) 0 else right.size()\n",
+    "        return 1 + n1 + n2\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "typealias Tree = Node?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "81bfb7a5-8a41-4737-bd0b-4f4377f63d08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val t0: Tree = null\n",
+    "val t1: Tree = Node(1, null, null)\n",
+    "val t2: Tree = Node(1, Node(2,null,null), null)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "eaa7e20d-95ae-419d-80e4-7ed960c040a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "null\n",
+      "Node(item=1, left=null, right=null)\n",
+      "Node(item=1, left=Node(item=2, left=null, right=null), right=null)\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(t0)\n",
+    "println(t1)\n",
+    "println(t2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9f22e318-c72e-4f09-a45e-638c333274b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(t1.size())\n",
+    "println(t2.size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3f8f26b9-1f92-44ee-aa5c-69660f736d1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Line_20.jupyter.kts (1:11 - 12) Only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type Line_14_jupyter.Tree /* = Line_14_jupyter.Node? */"
+     ]
+    }
+   ],
+   "source": [
+    "println(t0.size()) // 이건 t0가 null이라서 안됨"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9fcd630b-2399-4ef7-9bf9-b6936435b414",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "// 일반적으로 t0, t1, t2가 null인지 아닌지 확실치 않으면 매번 확인해서 처리해 줘야\n",
+    "println( if (t0==null) 0 else t0.size() )\n",
+    "println( if (t1==null) 0 else t1.size() )\n",
+    "println( if (t2==null) 0 else t2.size() )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "84809592-0114-4bd2-838a-de3efbce500a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// 널오브젝트 패턴을 활용해 좀더 객체지향적으로\n",
+    "sealed interface Tree {\n",
+    "    fun size(): Int\n",
+    "    \n",
+    "    data class Node(\n",
+    "            val item: Int,\n",
+    "            val left: Tree,\n",
+    "            val right: Tree): Tree {\n",
+    "        override fun size() = 1 + left.size() + right.size()\n",
+    "    }\n",
+    "    object Null: Tree {\n",
+    "        override fun size() = 0\n",
+    "        override fun toString() = \"Null\"\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "55c2b4b5-408c-411b-a5a5-b6ebc793a7bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val t0: Tree = Tree.Null\n",
+    "val t1: Tree = Tree.Node(1, Tree.Null, Tree.Null)\n",
+    "val t2: Tree = Tree.Node(1, Tree.Node(2,Tree.Null,Tree.Null), Tree.Null)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4a352101-29d5-4cfe-9a3c-4f01c1adbe90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(t0.size())\n",
+    "println(t1.size())\n",
+    "println(t2.size())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "685003fb-cd29-438d-84d2-f354f1aaf7dc",
+   "id": "0e28ce76-cc82-4980-992a-e1adf70848d3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -329,7 +598,7 @@
    "name": "kotlin",
    "nbconvert_exporter": "",
    "pygments_lexer": "kotlin",
-   "version": "1.8.20-Beta"
+   "version": "1.8.20"
   }
  },
  "nbformat": 4,
