--- a/jvproj/JvCalc.ipynb
+++ b/jvproj/JvCalc.ipynb
@@ -20,7 +20,7 @@
     "`ICalculator` 인터페이스의 주석에 지시된 내용과 수업시간에 설명한 내용을 바탕으로 해당 인터페이스를 구현하는 `Calculator`를 작성하고 적절히 테스트하라. 테스트들에서 인터페이스의 모든 메소드의 동작을 활용해야 하며, 의도한 테스트 시나리오대로 동작함을 확인할 수 있도록 적절한 출력이 이루어져야 한다.\n",
     "\n",
     "`appendEntry` 메소드의 주석에 \"legal entry\"라는 표현이 등장하는데, Java 버전에서는 이 내용은 사실상 거의 무시해도 좋다. 이것은 Kotlin 버전에서만 구현하는 것으로 한다.\n",
-    "보통 계산기 응용프로그램들은 올바른 식(valid expression)으로서 구성될 가망이 없는 버튼을 누르면 해당 입력을 거부되거나, 혹은 사용자에게 친절을 베풀어 자동으로 사용자가 입력하지 않은 내용까지 자동으로 추가하여 올바른 식을 구성할 수 있는 형태로만 입력이 진행된다.\n",
+    "보통 계산기 응용프로그램들은 올바른 식(valid expression)으로서 구성될 가망이 없는 버튼을 누르면 해당 입력을 거부하거나, 혹은 사용자에게 친절을 베풀어 자동으로 사용자가 입력하지 않은 내용까지 자동으로 추가하여 올바른 식을 구성할 수 있는 형태로만 입력이 진행된다.\n",
     "하지만, 이번 Java 버전에서는 올바른 식으로 구성될 가망이 없는 `Entry`들도 `appendEntry` 메소드를 통해 입력이 항상 가능하도록 구현하라.\n",
     "그러니까 `appendEntry` 메소드는 항상 `true`를 리턴하게 된다는 말이다. 단, null인 `Entry`는 어떤 경우에도 추가되지 `appendEntry`의 파라메터가 null이 아님을 확인하고 진행하도록 java-forax 교재에서처럼 `Objects.requireNonNull`을 활용해 처리하라.\n",
     "\n",
